Fixed: wflow-consoleweb - Datalist Builder - Tree menu icon not align correctly. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/builder/builder.css
+++ b/wflow-consoleweb/src/main/webapp/builder/builder.css
@@ -1000,6 +1000,13 @@ div.section, .header > ol {
     left: 40px;
     top: 0px;
 }
+.tree ol li.tree-viewer-node > label{
+    padding-left: 30px;
+}
+.tree ol li.tree-viewer-node > label:before {
+    left: 14px;
+    top: 3px;
+}
 .tree ol li input + ol > li {
     display: none;
     margin-left: -14px !important;
